# compyr

./: .gitignore  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
docs/: index.md
modules/: index.html
search/: search_index.json
src/compyr/: _types.py  config.py  decorators.py  logging_config.py  models.py
src/compyr/funcs/: run_profile_subprocess.py  utils.py
src/compyr/scripts/: R_utils.R  check_file_func.R  compare.py  profile_R_func.R  run_func_from_cli.py
tests/: compare_test.py
tests/R_tests/: check_file_func_test.py
