[project]
name = "compyr"
version = "0.1.0"
description = "Tiny package to comapre the output and behavior of Python and R functions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "pydantic>=2.9.2",
    "scalene>=1.5.45",
]

[project.optional-dependencies]
dataframes = [
    "pandas>=2.2.3",
    "pandera>=0.20.4",
    "polars>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
]
